== 0.2.4

* Fixed error handling on at rules.  Thanks Dan for tests!

== 0.2.3

* Fixed a bug where nil selectors on conditional selectors were being visited.

== 0.2.2

* I suck.

== 0.2.1

* Recovering from unexpected tokens in the properties section.

== 0.2.0

* Added CSS::SAC::Parser#parse_rule to parse a single rule.
* Added CSS::StyleSheet#find_rule for finding a particular rule.
* Added CSS::StyleSheet#rules_matching for finding all rules matching a node.
* Added CSS::StyleSheet#create_rule for creating a new rule.
* Added CSS::StyleSheet#find_all_rules_matching for finding all rules that match
  any node in the passed in document.
* Added .eql? to selector AST
* Added .hash to selector AST 
* Added .eql? to LexicalUnits 
* Added .hash to LexicalUnits 
* Added CSS::StyleSheet#to_css
* Added CSS::StyleSheet#reduce!
* CSS::StyleSheet is now the default document handler

== 0.1.1

* Added specificity to selectors.
* Added == to selector ASTs.
* Added =~ to selector ASTs.  The object passed in to =~ must quack like an
  hpricot node.  It must implement the following methods: name, parent, child,
  next_sibling, attributes.
* Added .to_xpath to the selector AST.
* Fixed a bug where functions as pseudo classes didn't parse.

== 0.1.0

* Birthday!
