@@ -17,7 +17,7 @@ module CSS
         end
 
         def specificity
-          0
+          [0, 0, 0, 0]
         end
       end
     end
